--- a/accounts/templates/oscar/dashboard/accounts/account_top_up.html
+++ b/accounts/templates/oscar/dashboard/accounts/account_top_up.html
@@ -16,7 +16,7 @@
 		<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">{% trans "Top up account" %} #{{ account.id }}</a></li>
+	<li class="active">{% trans "Top up account" %} #{{ account.id }}</li>
 </ul>
 {% endblock %}
 
