--- a/accounts/templates/oscar/dashboard/accounts/account_form.html
+++ b/accounts/templates/oscar/dashboard/accounts/account_form.html
@@ -16,7 +16,7 @@
 		<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">{{ title }}</a></li>
+	<li class="active">{{ title }}</li>
 </ul>
 {% endblock %}
 
