--- a/accounts/templates/oscar/dashboard/accounts/account_form.html
+++ b/accounts/templates/oscar/dashboard/accounts/account_form.html
@@ -16,15 +16,19 @@
 		<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active">{{ title }}</li>
+    {% if account %}
+    <li>
+        <a href="{% url accounts-detail account.id %}">{{ account }}</a>
+        <span class="divider">/</span>
+    </li>
+    <li class="active">{% trans "Update" %}</li>
+    {% else %}
+    <li class="active">{% trans "Create" %}</li>
+    {% endif %}
 </ul>
 {% endblock %}
 
-{% block header %}
-<div class="page-header">
-	<h1>{{ title }}</h1>
-</div>
-{% endblock header %}
+{% block headertext %}{{ title }}{% endblock %}
 
 {% block dashboard_content %}
 
