--- a/accounts/templates/oscar/dashboard/accounts/partials/account_detail.html
+++ b/accounts/templates/oscar/dashboard/accounts/partials/account_detail.html
@@ -64,8 +64,8 @@
 		{% endif %}
 		{% endwith %}
 		{% if account.product_range %}
-		<tr>
-			<th>Can be spent on products from range</th>
+		<td>
+            <th>{% trans "Can be spent on products from range" %}</th>
 			<td><a href="{% url dashboard:range-update account.product_range.id %}">{{ account.product_range }}</a></td>
 		</tr>
 		{% endif %}
