--- a/accounts/templates/oscar/dashboard/accounts/reports/profit_loss.html
+++ b/accounts/templates/oscar/dashboard/accounts/reports/profit_loss.html
@@ -20,11 +20,7 @@
 </ul>
 {% endblock %}
 
-{% block header %}
-<div class="page-header">
-	<h1>{{ title }}</h1>
-</div>
-{% endblock header %}
+{% block headertext %}{{ title }}{% endblock %}
 
 {% block dashboard_content %}
 
