--- a/accounts/templates/accounts/dashboard/reports/profit_loss.html
+++ b/accounts/templates/accounts/dashboard/reports/profit_loss.html
@@ -24,7 +24,7 @@
 
 {% block dashboard_content %}
 
-<form action="." method="get">
+<form class="well form-horizontal" action="." method="get">
 	{% include 'partials/form_fields.html' %}
 	<button type="submit" class="btn btn-primary">{% trans "Fetch report" %}</button>
 </form>
