--- a/accounts/templates/accounts/dashboard/account_list.html
+++ b/accounts/templates/accounts/dashboard/account_list.html
@@ -34,12 +34,11 @@
             <h2>{% trans "Search" %}</h2>
         </div>
 
-        <form method="get" action="." class="form-horizontal">
-            {% include 'partials/form_fields.html' %}
-            <button type="submit" class="btn btn-primary">{% trans "Search" %}</button>
-            or <a href="{% url accounts-list %}">{% trans "reset" %}</a>.
-        </form>
-    </div>
+	<form method="get" action="." class="form-horizontal">
+		{% include 'partials/form_fields.html' %}
+		<button type="submit" class="btn btn-primary">{% trans "Search" %}</button>
+		 {% trans "or" %}<a href="{% url accounts-list %}">{% trans "reset" %}</a>.
+	</form>
 
 	<div class="sub-header">
 		<h2>{{ queryset_description }}</h2>
