--- a/sandbox/templates/checkout/payment_details.html
+++ b/sandbox/templates/checkout/payment_details.html
@@ -3,24 +3,24 @@
 
 {% block payment_details %}
 <div class="sub-header">
-	<h2>Enter payment details</h2>
+	<h2>{% trans "Enter payment details" %}</h2>
 </div>
 
 {% if not allocation_form %}
     {# 1. Initial load of page - show form to look up account if they are not blocked #}
 	{% if is_blocked %}
-		<p>You are blocked.</p>
+		<p>{% trans "You are blocked." %}</p>
 	{% else %}
 		{% if user_accounts %}
-			<h3>Choose a user account</h3>
+			<h3>{% trans "Choose a user account" %}</h3>
 			<form action="." method="post">
 				{% csrf_token %}
 				<table class="table">
 					<thead>
 						<tr>
 							<th></th>
-							<th>Account</th>
-							<th>Balance</th>
+							<th>{% trans "Account" %}</th>
+							<th>{% trans "Balance" %}</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -37,44 +37,44 @@
 			</form>
 		{% endif %}
 
-		<h3>Look up an account</h3>
+		<h3>{% trans "Look up an account" %}</h3>
 		<form action="." method="post">
 			{% csrf_token %}
 			<input type="hidden" name="action" value="select_account" />
 			{% include 'partials/form_fields.html' with form=account_form %}
-			<button type="submit" class="btn btn-primary">Check balance</button>
+			<button type="submit" class="btn btn-primary">{% trans "Check balance" %}</button>
 		</form>
 	{% endif %}
 {% else %}
 	{# 2. An account has been found - choose allocation #}
 	{% with account=allocation_form.account %}
-	<h3>Account</h3>
+	<h3>{% trans "Account" %}</h3>
 	<table class="table">
 		<tr>
-			<th>Name</th>
+			<th>{% trans "Name" %}</th>
 			<td>{{ account.name }}</td>
 		</tr>
 		{% if account.description %}
 		<tr>
-			<th>Description</th>
+			<th>{% trans "Description" %}</th>
 			<td>{{ account.description }}</td>
 		</tr>
 		{% endif %}
 		{% if account.end_date %}
 		<tr>
-			<th>Expiry date</th>
+			<th>{% trans "Expiry date" %}</th>
 			<td>{{ account.end_date }}</td>
 		</tr>
 		{% endif %}
 		<tr>
-			<th>Balance</th>
+			<th>{% trans "Balance" %}</th>
 			<td>{{ account.balance|currency }}</td>
 		</tr>
 	</table>
 	{% endwith %}
-	<h3>Choose allocation</h3>
-	<p>The order total is {{ order_total_incl_tax|currency }}.</p>
-	<p>The maximum allocation from this account is {{ allocation_form.max_allocation|currency }}.</p>
+	<h3>{% trans "Choose allocation" %}</h3>
+	<p>{% trans "The order total is" %} {{ order_total_incl_tax|currency }}.</p>
+	<p>{% trans "The maximum allocation from this account is" %} {{ allocation_form.max_allocation|currency }}.</p>
 	<form action="." method="post">
 		{% csrf_token %}
 		{# Include account form hidden #}
@@ -83,21 +83,21 @@
 		</div>
 		<input type="hidden" name="action" value="allocate" />
 		{% include 'partials/form_fields.html' with form=allocation_form %}
-		<button type="submit" class="btn btn-primary btn-large">Allocate</button> or
-		<a href="{% url checkout:payment-details %}">cancel</a>.
+		<button type="submit" class="btn btn-primary btn-large">{% trans "Allocate" %}</button>{% trans "or" %}
+		<a href="{% url checkout:payment-details %}">{% trans "cancel" %}</a>.
 	</form>
 {% endif %}
 
 {% if account_allocations %}
-	<h3>Allocations</h2>
+	<h3>{% trans "Allocations" %}</h2>
 	<form action="." method="post">
 		{% csrf_token %}
 		<input type="hidden" name="action" value="remove_allocation" />
 		<table id="" class="table">
 			<thead>
 				<tr>
-					<th>Account code</th>
-					<th>Allocation</th>
+					<th>{% trans "Account code" %}</th>
+					<th>{% trans "Allocation" %}</th>
 					<th></th>
 				</tr>
 			</thead>
@@ -107,7 +107,7 @@
 						<td>{{ code }}</td> 
 						<td>{{ amount|currency }}</td>
 						<td>
-							<button type="submit" class="btn" name="remove_{{ code }}">Remove</button>
+							<button type="submit" class="btn" name="remove_{{ code }}">{% trans "Remove" %}</button>
 						</td>
 					</tr>
 				{% endfor %}
@@ -118,9 +118,9 @@
 
 
 {% if to_allocate == 0 %}
-	<a href="{% url checkout:preview %}" class="btn btn-primary btn-large">Continue</a>
+	<a href="{% url checkout:preview %}" class="btn btn-primary btn-large">{% trans "Continue" %}</a>
 {% else %}
-<p>Order total: {{ order_total_incl_tax|currency }}.  You need to allocate another
+<p>{% trans "Order total" %}: {{ order_total_incl_tax|currency }}. {% trans "You need to allocate another" %}
 	{{ to_allocate|currency }}</p>
 {% endif %}
 
