--- a/sandbox/templates/checkout/preview.html
+++ b/sandbox/templates/checkout/preview.html
@@ -8,10 +8,10 @@
 		<h2>{% trans "Payment" %}</h2>
 	</div>
 	<div class="well well-success">
-		<p>Account allocations</p>
+		<p>{% trans "Account allocations" %}</p>
 		<ul>
 		{% for code, amount in account_allocations.items %}
-		<li>{{ amount|currency }} from account with code {{ code }}</li>
+		<li>{{ amount|currency }} {% trans "from account with code" %} {{ code }}</li>
 		{% endfor %}
 		</ul>
 		<div class="alert-actions">
