--- a/accounts/templates/oscar/dashboard/accounts/account_list.html
+++ b/accounts/templates/oscar/dashboard/accounts/account_list.html
@@ -13,7 +13,7 @@
         <span class="divider">/</span>
     </li>
     <li>
-		<a href=".">Accounts</a>
+		<a href=".">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active"><a href=".">{{ title }}</a></li>
@@ -35,7 +35,7 @@
 	<form method="get" action=".">
 		{% include 'partials/form_fields.html' %}
 		<button type="submit" class="btn btn-primary">{% trans "Search" %}</button>
-		or <a href="{% url accounts-list %}">{% trans "reset" %}</a>.
+		 {% trans "or" %}<a href="{% url accounts-list %}">{% trans "reset" %}</a>.
 	</form>
 
 	<div class="sub-header">
