--- a/accounts/templates/accounts/dashboard/account_detail.html
+++ b/accounts/templates/accounts/dashboard/account_detail.html
@@ -28,9 +28,9 @@
 
 {% block dashboard_content %}
 
-{% include 'dashboard/accounts/partials/account_detail.html' %}
+{% include 'accounts/dashboard/partials/account_detail.html' %}
 <p>
-	<a class="btn" href="{% url accounts-update account.id %}">Edit</a>
+    <a class="btn" href="{% url accounts-update account.id %}">{% trans "Edit" %}</a>
 	<a href="{% url accounts-top-up account.id %}" class="btn">{% trans "Top-up" %}</a>
 	{% if not account.is_frozen %}
 	<a href="{% url accounts-freeze account.id %}" class="btn btn-danger">{% trans "Freeze" %}</a>
