--- a/accounts/templates/accounts/dashboard/account_freeze.html
+++ b/accounts/templates/accounts/dashboard/account_freeze.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-{% trans "Freeze account" %} #{{ account.id }} | {{ block.super }}
+    {% blocktrans with id=account.id %}Freeze account {{ id }}{% endblocktrans %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -27,7 +27,7 @@
 {% block headertext %}{% trans "Freeze account?" %}{% endblock %}
 
 {% block dashboard_content %}
-    {% include 'dashboard/accounts/partials/account_detail.html' %}
+    {% include 'accounts/dashboard/partials/account_detail.html' %}
 
     <form action="." method="post">
         {% csrf_token %}
