--- a/accounts/templates/accounts/dashboard/account_detail.html
+++ b/accounts/templates/accounts/dashboard/account_detail.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard/layout.html' %}
+{% load url from future %}
 {% load currency_filters %}
 {% load i18n %}
 
@@ -9,11 +10,11 @@
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-		<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
+		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-		<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
+		<a href="{% url 'accounts-list' %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
     <li class="active">{{ account }}</li>
@@ -30,12 +31,12 @@
 
 {% include 'accounts/dashboard/partials/account_detail.html' %}
 <p>
-    <a class="btn" href="{% url accounts-update account.id %}">{% trans "Edit" %}</a>
-	<a href="{% url accounts-top-up account.id %}" class="btn">{% trans "Top-up" %}</a>
+    <a class="btn" href="{% url 'accounts-update' account.id %}">{% trans "Edit" %}</a>
+	<a href="{% url 'accounts-top-up' account.id %}" class="btn">{% trans "Top-up" %}</a>
 	{% if not account.is_frozen %}
-	<a href="{% url accounts-freeze account.id %}" class="btn btn-danger">{% trans "Freeze" %}</a>
+	<a href="{% url 'accounts-freeze' account.id %}" class="btn btn-danger">{% trans "Freeze" %}</a>
 	{% else %}
-	<a href="{% url accounts-thaw account.id %}" class="btn btn-success">{% trans "Thaw" %}</a>
+	<a href="{% url 'accounts-thaw' account.id %}" class="btn btn-success">{% trans "Thaw" %}</a>
 	{% endif %}
 </p>
 
@@ -54,7 +55,7 @@
 		<tbody>
 			{% for txn in transactions %}
 			<tr>
-				<td><a href="{% url transfers-detail txn.transfer.reference %}">{{ txn.transfer }}</a></td>
+				<td><a href="{% url 'transfers-detail' txn.transfer.reference %}">{{ txn.transfer }}</a></td>
 				<td>{{ txn.amount|currency }}</td>
 				<td>{{ txn.transfer.description|default:"-" }}</td>
 				<td>{{ txn.transfer.user|default:"-" }}</td>
