--- a/accounts/templates/accounts/dashboard/account_top_up.html
+++ b/accounts/templates/accounts/dashboard/account_top_up.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard/layout.html' %}
+{% load url from future %}
 {% load currency_filters %}
 {% load i18n %}
 
@@ -9,15 +10,15 @@
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-		<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
+		<a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-		<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
+		<a href="{% url 'accounts-list' %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url accounts-detail account.id %}">{{ account }}</a>
+        <a href="{% url 'accounts-detail' account.id %}">{{ account }}</a>
         <span class="divider">/</span>
     </li>
     <li class="active">{% trans "Top up" %}</li>
