--- a/accounts/templates/accounts/dashboard/account_list.html
+++ b/accounts/templates/accounts/dashboard/account_list.html
@@ -71,13 +71,21 @@
                     <td>{{ account.num_transactions }}</td>
                     <td>{{ account.date_created }}</td>
                     <td>
-                        <a href="{% url 'accounts-update' account.id %}" class="btn">{% trans "Edit" %}</a>
-                        <a href="{% url 'accounts-detail' account.id %}" class="btn">{% trans "Transactions" %}</a>
-                        <a href="{% url 'accounts-top-up' account.id %}" class="btn">{% trans "Top-up" %}</a>
-                        {% if not account.is_frozen %}
-                            <a href="{% url 'accounts-freeze' account.id %}" class="btn btn-danger">{% trans "Freeze" %}</a>
+                        {% if account.is_editable %}
+                            <a href="{% url 'accounts-update' account.id %}" class="btn">{% trans "Edit" %}</a>
                         {% else %}
-                            <a href="{% url 'accounts-thaw' account.id %}" class="btn btn-success">{% trans "Thaw" %}</a>
+                            <a href="#" class="btn disabled">{% trans "Edit" %}</a>
+                        {% endif %}
+                        <a href="{% url 'accounts-detail' account.id %}" class="btn">{% trans "Transactions" %}</a>
+                        {% if account.is_editable %}
+                            <a href="{% url 'accounts-top-up' account.id %}" class="btn">{% trans "Top-up" %}</a>
+                            {% if not account.is_frozen %}
+                                <a href="{% url 'accounts-freeze' account.id %}" class="btn btn-danger">{% trans "Freeze" %}</a>
+                            {% else %}
+                                <a href="{% url 'accounts-thaw' account.id %}" class="btn btn-success">{% trans "Thaw" %}</a>
+                            {% endif %}
+                        {% else %}
+                            <a href="#" class="btn disabled">{% trans "Top-up" %}</a>
                         {% endif %}
                     </td>
                 </tr>
