Add 'Withdraw' from account view
A transaction wusing the same logic as topping up, but with reversing the accounts is done

Conflicts:
	accounts/templates/accounts/dashboard/account_list.html
	accounts/templates/oscar/dashboard/accounts/account_detail.html

--- a/accounts/templates/oscar/dashboard/accounts/account_detail.html
+++ b/accounts/templates/oscar/dashboard/accounts/account_detail.html
@@ -32,6 +32,7 @@
 <p>
 	<a class="btn" href="{% url accounts-update account.id %}">Edit</a>
 	<a href="{% url accounts-top-up account.id %}" class="btn">{% trans "Top-up" %}</a>
+	<a href="{% url accounts-withdraw account.id %}" class="btn">{% trans "Withdraw" %}</a>
 	{% if not account.is_frozen %}
 	<a href="{% url accounts-freeze account.id %}" class="btn btn-danger">{% trans "Freeze" %}</a>
 	{% else %}
