Allow admins to withdraw money from a fund
The money goes back to the source account.

Cherry-picked from adb03afef51bba4d3cbcf6d0a320992b24542719 on the
releases/0.1 branch.

--- a/accounts/templates/accounts/dashboard/account_top_up.html
+++ b/accounts/templates/accounts/dashboard/account_top_up.html
@@ -38,7 +38,8 @@
             {% include 'partials/form_field.html' with field=form.source_account %}
         {% endif %}
 		{% include 'partials/form_field.html' with field=form.amount %}
-		<button type="submit" class="btn btn-large btn-success">{% trans "Transfer" %}</button>
+		<button type="submit" class="btn btn-large btn-success">{% trans "Top-up" %}</button>
+            or <a href="{% url 'accounts-detail' account.id %}">{% trans "cancel" %}</a>.
 	</form>
 	{% else %}
 	<p>{% trans "This account cannot be topped-up." %}</p>
