--- a/accounts/templates/accounts/dashboard/account_list.html
+++ b/accounts/templates/accounts/dashboard/account_list.html
@@ -79,6 +79,7 @@
                         <a href="{% url 'accounts-detail' account.id %}" class="btn">{% trans "Transactions" %}</a>
                         {% if account.is_editable %}
                             <a href="{% url 'accounts-top-up' account.id %}" class="btn">{% trans "Top-up" %}</a>
+                            <a href="{% url 'accounts-withdraw' account.id %}" class="btn">{% trans "Withdraw" %}</a>
                             {% if not account.is_frozen %}
                                 <a href="{% url 'accounts-freeze' account.id %}" class="btn btn-danger">{% trans "Freeze" %}</a>
                             {% else %}
